--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,18 @@ language: go
 
 go:
   - "1.10"
+
+script:
+  - make
+
+after_success:
+  - make release
+
+deploy:
+  provider: releases
+  api_key: $GITHUB_TOKEN
+  file_glob: true
+  file: dist/*
+  skip_cleanup: true
+  on:
+    tags: true
